@@ -151,7 +151,7 @@ BEGIN
     PUSHBUTTON      "&Cancel",IDCANCEL,238,108,50,14
 END
 
-IDD_IMPORT DIALOGEX 0, 0, 285, 281
+IDD_IMPORT DIALOGEX 0, 0, 285, 292
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | 
     WS_SYSMENU
 CAPTION "Import"
@@ -165,11 +165,13 @@ BEGIN
     GROUPBOX        "Import Message",IDC_STATIC2,7,46,271,78
     EDITTEXT        IDC_MESSAGE,13,59,257,60,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_AUTOHSCROLL | ES_WANTRETURN
-    GROUPBOX        "Temporary Files To Delete",IDC_STATIC3,7,129,271,123
+    GROUPBOX        "Temporary Files To Delete",IDC_STATIC3,7,129,271,136
     CONTROL         "",IDC_FILELIST,"SysListView32",LVS_REPORT | 
                     LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,13,142,257,103
-    DEFPUSHBUTTON   "&OK",IDOK,157,260,50,14
-    PUSHBUTTON      "&Cancel",IDCANCEL,228,260,50,14
+    DEFPUSHBUTTON   "&OK",IDOK,157,271,50,14
+    PUSHBUTTON      "&Cancel",IDCANCEL,228,271,50,14
+    CONTROL         "Select / Deselect all",IDC_SELECTALL,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,250,257,10
 END
 
 IDD_LOGMESSAGE DIALOGEX 0, 0, 289, 245
@@ -553,7 +555,7 @@ BEGIN
         VERTGUIDE, 248
         VERTGUIDE, 270
         TOPMARGIN, 7
-        BOTTOMMARGIN, 274
+        BOTTOMMARGIN, 285
     END
 
     IDD_LOGMESSAGE, DIALOG
