@@ -133,6 +133,8 @@
 #define IDC_INPUTTEXT                   1064
 #define IDC_HINTTEXT                    1065
 #define IDC_AUTOCLOSE                   1066
+#define IDC_CHECK1                      1067
+#define IDC_SELECTALL                   1067
 #define IDS_AUTH_USERNAME               1100
 #define IDS_AUTH_PASSWORD               1101
 #define IDS_MSGBOX_ABORT                1154
@@ -288,7 +290,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        162
 #define _APS_NEXT_COMMAND_VALUE         32771
-#define _APS_NEXT_CONTROL_VALUE         1067
+#define _APS_NEXT_CONTROL_VALUE         1068
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
 #endif
