@@ -24,6 +24,8 @@
 - ADD: New option to close the progress window
        automatically after the command is
        finished. (Stefan)
+- ADD: Import dialog got a "select/deselect all"
+       button. (Stefan)
        
 Version 0.19
 - BUG: The conflicted files weren't always determined
